# bingo_memes_old

./: .gitignore  README.md  bingo_game_system.txt  manage.py  pyproject.toml
api/: filters.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
api/management/commands/: init_db.py
api/migrations/: 0001_initial.py
bingo_memes/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: auth.tsx  context.tsx  debug.tsx  index.tsx  solarized.css  types.ts  urls.ts
frontend/src/api/: backend.ts  render.tsx
frontend/src/components/: cardinfo.tsx  cardlist.tsx  cardlistview.tsx  cardschema.ts  helpers.ts  loading.tsx  navbar.tsx  pagination.tsx  searchbar.tsx  sidebar.tsx  snippets.tsx
frontend/src/scss/: bootstrap-custom.scss  main.scss  sidebar.scss  solarized.scss  test.module.scss
frontend/src/views/: cardcreateview.tsx  cardview.tsx  categoryview.tsx  catviewnew.tsx  homepageview.tsx  homeview.tsx  loginview.tsx  searchview.tsx  signupview.tsx  userview.tsx
frontend/static/frontend/: main.js
scripts/: db_name.py  fill-db  gunicorn-setup  nginx-setup  postgres-init  reset-db
sort_algo/: Cargo.toml  build
sort_algo/src/: lib.rs
